<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Renewals</groupId>
	<artifactId>Renewals</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>

		<suiteXmlFile>testng.xml</suiteXmlFile>

		<!-- <suiteXmlFile> #{TheVariable}#</suiteXmlFile> -->

		<version.commons-io>2.6</version.commons-io>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

	</properties>

	<build>

		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>

			</resource>
		</resources>
		<plugins>
			<plugin>

				<artifactId>maven-compiler-plugin</artifactId>

				<version>3.8.1</version>

				<configuration>

					<source>1.8</source>

					<target>1.8</target>

				</configuration>
			</plugin>

			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-surefire-plugin</artifactId>

				<version>2.19.1</version>


				<configuration>

					<testFailureIgnore>true</testFailureIgnore>


					<suiteXmlFiles>

						<suiteXmlFile>testng.xml</suiteXmlFile>

					</suiteXmlFiles>

				</configuration>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18.1</version>
				<executions>
					<execution>
						<configuration>
							<forkCount>3</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
							<testFailureIgnore>true</testFailureIgnore>
							<includes>
								<includesFile>**/*Test.java</includesFile>
							</includes>
						</configuration>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.relevantcodes</groupId>
			<artifactId>extentreports</artifactId>
			<version>2.41.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.12.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

	</dependencies>
</project>